[package]
name = "rndis_mac"
version = "0.0.1"
edition = "2021"

[lib]
name = "rndis_mac"
path = "src/lib.rs"

[[bin]]
name = "rndis-probe"
path = "src/bin/probe.rs"

[[bin]]
name = "rndis-handshake"
path = "src/bin/handshake.rs"

[[bin]]
name = "rndis-dump"
path = "src/bin/dump.rs"

[[bin]]
name = "rndis-raw-rx"
path = "src/bin/raw_rx.rs"

[[bin]]
name = "rndis-up"
path = "src/bin/up.rs"

[dependencies]
nusb = "0.1"
anyhow = "1"
futures-lite = "2"
libc = "0.2"
